* Fri Dec 29 2017 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.3.0
- Configure LDAP TLS to use the Omnibus' `trusted-certs/` instead of the LDAP
  `ca_file` setting
  (see https://gitlab.com/gitlab-org/gitlab-ce/issues/37254#note_3894021)
- Add `ldap_verify_certificates` parameter
- Fixed LDAP provider name sanitation
- Update deprecated LDAP encryption configurations for GitLab 9.4+
- Add acceptance tests for LDAP authentication
- Document acceptance test features

* Wed Apr 26 2017 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.0
- Manage PAM access and SSH keys for local Git Omnibus `git` user
- Update static assets

* Wed Apr 26 2017 SIMP Team <simp-project.com> - 0.1.0
- This is the initial code for a `simp_gitlab` module, which installs
  GitLab Omnibus and incorporates it into SIMP.