@@ -34,7 +34,7 @@
     - bundle exec rake check:dot_underscore
     - bundle exec rake check:test_file
     - bundle exec rake pkg:check_version
-    - bundle exec rake compare_latest_tag
+    - bundle exec rake pkg:compare_latest_tag
     - bundle exec rake lint
     - bundle exec rake clean
     - bundle exec puppet module build
