@@ -3,10 +3,12 @@
   `ca_file` setting
   (see https://gitlab.com/gitlab-org/gitlab-ce/issues/37254#note_3894021)
 - Add `ldap_verify_certificates` parameter
+- Add `ldap_ssl_protocols` parameter
 - Fixed LDAP provider name sanitation
 - Update deprecated LDAP encryption configurations for GitLab 9.4+
 - Add acceptance tests for LDAP authentication
 - Document acceptance test features
+- Removed unused `syslog` parameter
 
 * Wed Apr 26 2017 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.2.0
 - Manage PAM access and SSH keys for local Git Omnibus `git` user
